# PhoenixC2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  PF.py  README.md  SECURITY.md  db.sqlite3  insomnia.json  install.py  payload.go  pre-commit-config.yaml  pyproject.toml  pystyle-test.py  requirements.txt  setup.py  test.py  test.txt  uninstall.sh  virus.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  docker.yml  pypi-publish.yml  python-app.yml  python-publish.yml  tests.yml
Phoenix-Framework/: globals.py  listener.py  option-prototype.py  payload.py  pf.py  pfclient  pfclient.py  pfcreate  pfcreate.py  pfserver  pfserver.py  prototypes.py  test-payload.py  test.py  tmp.py
Phoenix-Framework/Client/: __init__.py  args.py  communication.py
Phoenix-Framework/Creator/: __init__.py  create.py  create_listener.py  create_stager.py  listener.py  loader.py  options.py  stager.py
Phoenix-Framework/Data/: ssl.key  ssl.pem
Phoenix-Framework/Database/: __init__.py  base.py  devices.py  listeners.py  logentry.py  stagers.py  users.py
Phoenix-Framework/Devices/: __init__.py  linux.py  windows.py
Phoenix-Framework/Handlers/: HTTP.py  SOCKET.py  __init__.py  base.py
Phoenix-Framework/Listeners/: base.py  listener.py
Phoenix-Framework/Loaders/: Loader.py  loader.java
Phoenix-Framework/Modules/: base.py
Phoenix-Framework/Payloads/: reverse_socket_python.py
Phoenix-Framework/Server/: __init__.py  args.py  server_class.py  services.py  tmp.py
Phoenix-Framework/Utils/: __init__.py  db.py  libraries.py  logs.py  ui.py  web.py
Phoenix-Framework/Web/: __init__.py  api.py  auth.py  devices.py  routes.py
Phoenix-Framework/tests/: auth.py  listeners.py  routes.py
Server/: server.py
Tests/: Auth.py  Listeners.py
Virus/: client.py
developing/: Basic.drawio  TODO.md  exploit-creation.drawio
phoenix/development/: database.py
phoenix/server/: __main__.py  args.py
phoenix/tests/: routes.py
phoenix_framework/: pfserver
phoenix_framework/Client/: cli.py
phoenix_framework/client/: __main__.py  session.py
phoenix_framework/development/: __init__.py  database.py
phoenix_framework/server/: __init__.py  __main__.py  args.py
phoenix_framework/tests/: auth.py  listeners.py  routes.py
phoenixc2/: __init__.py  __main__.py
phoenixc2/client/: __main__.py  server.py  widgets.py
phoenixc2/server/: args.py  (+2 more)
(+438 files in other folders)
